sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:35: error: ';' expected but 'while' found.
      } while(j*1 <=i)
        ^AlgInsertionSort:38: error: 'while' expected but identifier found.
    setValeur(casePourV , v) 
    ^AlgInsertionSort:39: error: '(' expected but '}' found.
  }
  ^